last commit espe server

--- a/SELI-Platform/.deploy/mup.js.save.1
+++ b/SELI-Platform/.deploy/mup.js.save.1
@@ -63,9 +63,8 @@ module.exports = {
        // Enable Let's Encrypt
        //letsEncryptEmail: 'mauro3g@hotmail.com',
 crt: './server.crt',
-key: './server.key',       
-//cer: 'ServerCertificate.cer',
-//key: 'cacerts.key',
+key: './server.key
+',       
 forceSSL: true
      }
    }
